14:23 클래스패스 설정

--- a/team3/.classpath
+++ b/team3/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/naa15/git/ezen_team3/team3/src/project_csb/database/mysql-connector-j-8.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/mysql-connector-j-8.0.33/mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
